// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1f30jn7 sc-ifAKCX guaPvx"
  onClick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1f30jn7 sc-ifAKCX guaPvx"
  onClick={[Function]}
  text="xoxo"
/>
`;
